<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstLandingActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_getStarted"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/get_started_for_free"
        android:textColor="@color/colorTertiary"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_firstLandingBrief"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/work_sans_medium"
        android:text="@string/track_and_manage_your_inventory_securely_on_your_phone"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_getStarted"
        app:layout_constraintEnd_toEndOf="@+id/btn_getStarted"
        app:layout_constraintStart_toStartOf="@+id/btn_getStarted" />

    <TextView
        android:id="@+id/tv_logo_text_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/work_sans_black"
        android:text="@string/app_name_logo"
        android:textColor="@color/colorPrimary"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>